name:           haskell-lsp-client
version:        0.0.1.0
synopsis:       A haskell package to build your own Language Server client.
category:       Language, Protocol, Development
homepage:       https://github.com/noughtmare/haskell-lsp-client#readme
author:         Jaro Reinders
maintainer:     jaro.reinders@gmail.com
copyright:      2017 Jaro Reinders
license:        GPL-2
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

extra-source-files:
    README.md

library
  hs-source-dirs:
      src
  build-depends:
      base >= 4.7 && < 5
    , haskell-lsp
    , text
    , aeson
    , data-default
    , lens
    , bytestring
    , process
    , stm
    , attoparsec
    , containers
    , transformers
  exposed-modules:
      LSP.Client
  other-modules:
      Paths_haskell_lsp_client
  default-language: Haskell2010

executable haskell-lsp-client
  main-is: Main.hs
  hs-source-dirs:
      app
  build-depends:
      base >= 4.7 && < 5
    , haskell-lsp
    , text
    , haskell-lsp-client
  if os(windows)
    build-depends:
        Win32
  else
    build-depends:
        unix
  other-modules:
      Compat
  default-language: Haskell2010
